<resources>
    <string name="app_name">DarshanAssignment2</string>
    <string name="add_task">Add Task</string>
    <string name="view_tasks">View Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="voice_input">Voice Input</string>
    <string name="pick_time">Pick Time</string>
    <string name="save_task">Save Task</string>
    <string name="id">ID</string>
    <string name="due_time">Due Time</string>
    <string name="time">Due: 08:00 AM</string>
    <string name="pick_new_time">Pick New Time</string>
    <string name="edit_task_name">Edit Task Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_task">Enter Task</string>
    <string name="task_id">Task ID: </string>
    <string name="due_date">Due Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error_enter_task_name">Enter Task Name</string>
    <string name="due_date_label">Due Date: </string>
    <string name="due_time_label">Due Time: </string>
    <string name="extra_task_id">TASK_ID</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_format">MMM d, yyyy</string>
    <string name="error_name_required">Name required</string>
    <string name="action_snooze_task">SNOOZE_TASK</string>
    <string name="action_delete_task">DELETE_TASK</string>
    <string name="log_tag_notify">NOTIFY</string>
    <string name="log_task_snoozed">Task snoozed!</string>
    <string name="log_task_deleted">Task deleted!</string>
    <string name="notification_title_prefix">Task Due: </string>
    <string name="notification_content_text">This task is due soon.</string>
    <string name="notification_action_snooze">Snooze</string>
    <string name="notification_action_delete">Delete</string>
    <string name="notification_channel_name">Task Alerts</string>
    <string name="notification_channel_description">Channel for upcoming task notifications</string>

</resources>