<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_12dp">

        <EditText
            android:id="@+id/editTaskName"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_38dp"
            android:hint="@string/enter_task"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sp"
            android:layout_marginBottom="@dimen/_12dp" />

        <Button
            android:id="@+id/btnPickTime"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_40dp"
            android:text="@string/pick_time"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            android:background="@drawable/rounded_task_item"
            android:layout_marginBottom="@dimen/_10dp" />

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_40dp"
            android:text="@string/save_task"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            android:background="@drawable/rounded_time" />
    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>
